--- a/_includes/collection-calendar.html
+++ b/_includes/collection-calendar.html
@@ -212,7 +212,7 @@
     </div>
 {% endif %}
 
-<div aria-live="polite" aria-atomic="true" class="position-relative">
+<div aria-live="polite" aria-atomic="true" class="position-relative d-print-none">
     <div class="toast-container position-fixed top-0 end-0 p-3">
         <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
             <div class="toast-header">
