--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -75,6 +75,7 @@ $body-bg: #f2f2f2;
 @import "bootstrap/scss/grid";
 @import "bootstrap/scss/nav";
 @import "bootstrap/scss/navbar";
+@import "bootstrap/scss/badge";
 @import "bootstrap/scss/buttons";
 @import "bootstrap/scss/close";
 @import "bootstrap/scss/transitions";
