Update alert styling

--- a/_includes/bin-collection-calendar.html
+++ b/_includes/bin-collection-calendar.html
@@ -4,7 +4,7 @@
     {% assign calendarSearchUrl = site.calendarSearchUrl %}
 {% endif %}
 
-<div class="d-print-none alert bg-primary text-white p-2">The address search option uses Gedling Borough Council's new <a href="https://waste.digital.gedling.gov.uk/w/webpage/bin-collections" target="_blank" rel="nofollow" class="text-white">bin collection search tool</a> and may occasionally fail to return results. If you encounter problems, use the street search option as an alternative.</div>
+<div class="d-print-none alert alert-primary" role="alert">The address search option uses Gedling Borough Council's new <a href="https://waste.digital.gedling.gov.uk/w/webpage/bin-collections" target="_blank" rel="nofollow" class="text-black">bin collection search tool</a> and may occasionally fail to return results. If you encounter problems, use the street search option as an alternative.</div>
 
 <p class="d-print-none">For best results, use searches like "101 Arnold Lane" or full addresses like "101 Arnold Lane Gedling Nottingham NG4 4HE"</p>
 
