--- a/_includes/find-collection-schedule.html
+++ b/_includes/find-collection-schedule.html
@@ -136,7 +136,7 @@
 
                 window.dataLayer.push({
                     'event': 'bin_collection_search',
-                    'streetQuery': streetNameInput.value
+                    'streetQuery': streetNameInput.value.toLowerCase()
                 });
             })
             .catch((error) => {
